# stdc60.org

./: .gitignore  CLAUDE.md  flake.nix  site.hs  stdc60-org.cabal
.github/workflows/: deploy.yml
content/: code-of-conduct.md  hotels.md  index.md  local-info.md  registration.md  schedule.md  speakers.md
content/tracks/: applied-topology.md  continuum-theory.md  dynamics.md  general-topology.md  geometric-group-theory.md  geometric-topology.md
css/: style.css
logo/: knasterify.py
templates/: default.html  home.html  page.html
