cabal-version:      2.4
name:               stdc60-org
version:            0.1.0.0
synopsis:           Static site generator for stdc60.org
license:            MIT

executable site
  main-is:          site.hs
  build-depends:
      base          >= 4.14 && < 5
    , hakyll         >= 4.16
    , pandoc
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
